--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   ai:
     build: .
     restart: always
+    environment:
+      FC_LANG: ja
     volumes:
       - ./config.json:/ai/config.json:ro
       - ./memory:/ai/memory
