--- a/.github/workflows/docker-nullcat.yml
+++ b/.github/workflows/docker-nullcat.yml
@@ -1,9 +1,9 @@
-name: Publish Docker image
+name: Publish Docker image [nullcat]
 
 on:
-  release:
-    types: [published]
-  workflow_dispatch:
+  push:
+    branches:
+      - 'nullnyat-nullcat'
 
 jobs:
   push_to_registry:
@@ -29,4 +29,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/atsu1125/ai:latest
+          tags: ghcr.io/atsu1125/ai:nullcat
