--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"_v": "1.5.0-ia2",
 	"main": "./built/index.js",
 	"engines" : { 
-		"node" : ">=14.17.0 <18.0.0"
+		"node" : ">=14.17.0"
 	},
 	"scripts": {
 		"start": "node ./built",
