--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"seedrandom": "3.0.5",
 		"timeout-as-promise": "1.0.0",
 		"ts-node": "10.9.1",
-		"twemoji-parser": "14.0.0",
+		"twemoji-parser": "git+https://github.com/mei23/twemoji-parser.git#15.0.1",
 		"typescript": "4.9.4",
 		"ws": "8.11.0"
 	},
