--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"seedrandom": "3.0.5",
 		"timeout-as-promise": "1.0.0",
 		"ts-node": "10.9.1",
-		"twemoji-parser": "git+https://github.com/mei23/twemoji-parser.git#15.0.1",
+		"@twemoji/parser": "15.0.0",
 		"typescript": "5.4.2",
 		"ws": "8.12.0"
 	},
